Fix policy spacing in the multiple policy case.

--- a/apps/console/src/app/person-coverage/member-policy.component.scss
+++ b/apps/console/src/app/person-coverage/member-policy.component.scss
@@ -49,3 +49,8 @@ dl {
   grid-template-columns: max-content 80fr;
   column-gap: 2rem;
 }
+
+.policy {
+  margin: 0.75rem;
+  border: 2px solid;
+}
